# d2r-agent

./: .env.example  .gitignore  README.md  STATUS.md  project-d2r-agent.md  pyproject.toml  reddit_qa_todo.json  requirements.txt  telegram_bot.py  test_runs_after_phase0_1.txt  test_runs_after_phase0_2.txt  test_runs_baseline_2026-03-09.txt
data/: fact_cards.jsonl  memory.jsonl  seed_urls.yaml  strategy_cards.jsonl  telegram_sessions.json
docs/: intent-classifier-v2-impl-2026-03-28.md  intent-classifier-v2-plan-2026-03-28.md  intent-classifier-v2-review-2026-03-28.md  telegram-direct-answer-investigation-2026-03-28-review.md  telegram-direct-answer-investigation-2026-03-28-summary.md  telegram-direct-answer-investigation-2026-03-28.md
notes/: necro_onehand_twohand_basin_note.md  reddit-hot-qa-2026-03-31.md  strategy-cards-roadmap.md  todo.md  warlock-strategy-sources.yaml
project-runs/: 2026-04-07_end.json  2026-04-07_run2_end.json  2026-04-07_run2_start.json  2026-04-07_run3_skip.json  2026-04-07_start.json  2026-04-08_end.json  2026-04-08_start.json  2026-04-09_end.json  2026-04-09_start.json  2026-04-10_end.json  2026-04-10_start.json  2026-04-11_end.json  2026-04-11_start.json  2026-04-12_end.json  2026-04-12_start.json  2026-04-13_end.json  2026-04-13_start.json  2026-04-14_end.json  2026-04-14_start.json  2026-04-15_end.json  2026-04-15_start.json  2026-04-16_end.json  2026-04-16_start.json  2026-04-17_end.json  2026-04-17_start.json  2026-04-18_end.json  2026-04-18_start.json
scripts/: build_mechanics_fact_db.py  cli.py  debug_search.py  ingest_factbase.py  (+7 more)
(+86 files in other folders)
